# BoltDB

./: CMakeLists.txt  QUICK_START.md  README.md  build.bat  build.sh  datastore.cpp  datastore.h  http_server.cpp  http_server.h  interactive_client.cpp  main.cpp  persistence.cpp  persistence.h  server.cpp  server.h  simple_test_client.cpp  start_server.bat  test_client.cpp  test_demo.bat  test_demo.ps1
backend/: package-lock.json  package.json  server.js
backend/auth/: authCheck.js
backend/controllers/: question.controller.js  test.controller.js  user.controller.js
backend/db/: connectDb.js
backend/models/: question.model.js  test.model.js  user.model.js
backend/routes/: question.route.js  test.route.js  user.route.js
frontend/: package-lock.json
web/: app.js  index.html  style.css
